Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_azure-xl-frontend.yml
+++ b/.github/workflows/main_azure-xl-frontend.yml
@@ -21,10 +21,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build
+      - name: npm install, build, and test
         run: |
           npm install
           npm run build --if-present
+          npm run test --if-present
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
@@ -51,5 +52,5 @@ jobs:
         with:
           app-name: 'azure-xl-frontend'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_8F039C2B4B4845498F27EDEBC71539DE }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_5FA5D903F0D743C79A927C92BF1A1550 }}
           package: .
