--- a/.github/workflows/main_azure-xl-frontend.yml
+++ b/.github/workflows/main_azure-xl-frontend.yml
@@ -46,7 +46,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'sitename'
+          app-name: 'azure-xl-frontend'
           slot-name: 'Production'
           publish-profile: $
           package: .
